inserção do modal

--- a/index.html
+++ b/index.html
@@ -22,6 +22,35 @@
       </div>
     </header>
 
+    <section class="btn-modal-create">
+      <a href="#" class="btn" onclick="popupToggle()">Register Guitar</a>
+    </section>
+
+    <section id="popup">
+      <div class="content">
+        <h2>Register a new guitar!</h2>
+
+        <div class="content-input">
+          <form action="">
+            <input type="text" name="name" id="name" placeholder="name" />
+            <input type="text" name="model" id="model" placeholder="model" />
+            <input
+              type="text"
+              name="description"
+              id="description"
+              placeholder="description"
+            />
+            <input type="text" name="price" id="price" placeholder="price" />
+            <input type="text" name="img" id="img" placeholder="image" />
+            <button type="submit" class="btn">Register</button>
+          </form>
+        </div>
+      </div>
+      <a class="close" onclick="popupToggle()"
+        ><img src="/assets/img/close.png" alt="close"
+      /></a>
+    </section>
+
     <div class="selected-guitar"></div>
 
     <div class="container" id="container"></div>
