--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <header>
-      <h1><img src="/assets/img/logo.png" alt="" /></h1>
+      <h1>
+        <a href="/"><img src="/assets/img/logo.png" alt="" /></a>
+      </h1>
 
       <div class="header-container">
         <p>Select your guitar for ID</p>
         <div class="select-guitar">
-          <input type="number" id="id-guitar" />
+          <input type="number" id="id-guitar" placeholder="ID" />
           <button onclick="findByIdGuitars()">
             <img src="/assets/img/lupa.png" alt="lupa" />
           </button>
@@ -42,7 +44,7 @@
             />
             <input type="text" name="price" id="price" placeholder="price" />
             <input type="text" name="img" id="img" placeholder="image" />
-            <button type="submit" class="btn">Register</button>
+            <button type="submit" class="btn-1">Register</button>
           </form>
         </div>
       </div>
