create e update funcionando

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 
     <section id="popup">
       <div class="content">
-        <h2>Register a new guitar!</h2>
+        <h2 id="modal-tittle">Register a new guitar!</h2>
 
         <div class="content-input">
           <form>
+            <input type="hidden" name="id" id="id" />
             <input type="text" name="name" id="name" placeholder="name" />
             <input type="text" name="model" id="model" placeholder="model" />
             <input
