--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
       /></a>
     </section>
 
+    <section id="popup-delete">
+      <div class="content">
+        <h2 id="modal-tittle-delete">Are you sure?</h2>
+        <div class="btn">
+          <a type="button" class="btn-yes btns">Yes!</a>
+          <a type="button" class="btn-no btns" onclick="openModalDel()">Not.</a>
+        </div>
+
+        <div class="content-input"></div>
+      </div>
+      <a class="close" onclick="openModalDel()"
+        ><img src="/assets/img/close.png" alt="close"
+      /></a>
+    </section>
+
     <div class="selected-guitar"></div>
 
     <div class="container" id="container"></div>
