--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="header-container">
         <p>Select your guitar for ID</p>
         <div class="select-guitar">
-          <input type="number" id="id-guitar" placeholder="ID" />
+          <input type="text" id="id-guitar" placeholder="ID" />
           <button onclick="findByIdGuitars()">
             <img src="/assets/img/lupa.png" alt="lupa" />
           </button>
